--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,12 @@
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    <link rel="stylesheet" href="/css/reset.css">
+   <link rel="stylesheet" href="/css/border.css">
+   <link rel="stylesheet" href="/css/iconfont.css">
     <title>React App</title>
     <script src="/js/flexble.js"></script>
     <script src="/js/fastclick.js"></script>
+    <script src="/js/iconfont.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
