--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,12 @@
    <link rel="stylesheet" href="/css/reset.css">
    <link rel="stylesheet" href="/css/border.css">
    <link rel="stylesheet" href="/css/iconfont.css">
+   <link rel="stylesheet" href="/css/swiper.css">
     <title>React App</title>
     <script src="/js/flexble.js"></script>
     <script src="/js/fastclick.js"></script>
     <script src="/js/iconfont.js"></script>
+    <script src="/js/swiper.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
